--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-react": "^7.21.5",
     "prettier": "2.2.1",
+    "stylelint": "^13.8.0",
+    "stylelint-config-css-modules": "^2.2.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-prettier": "^1.1.2",
+    "stylelint-scss": "^3.18.0",
     "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.1.2"
   }
